docs(project): 添加代码质量门禁规范和修复多项代码问题
- 在 AGENTS.md 中新增代码质量门禁章节，规定 Java 和前端项目的检查流程
- 创建 .agents/skills/openclaw4j-code-quality-gate/SKILL.md 技能定义文件
- 创建 .codex/skills/openclaw4j-code-quality-gate/SKILL.md Codex 入口文件
- 修复 ApiExampleController 中错误的变量引用，使用正确的 item2 对象
- 优化 APIExecuteProcessor 中的结果判断逻辑，移除冗余的非空检查
- 为多个配置类添加 Serializable 接口实现，包括 Input、UserParams、Params、Param 和 ProcessOutput
- 将 ASMCodeExecutor 中的静态变量改为私有常量，提升封装性
- 将 ConversationChatMemory 中的 Redis 键前缀改为常量定义
- 修复 DateUtils 类的继承关系并添加日期解析工具方法
- 优化 FileManager 中的异常处理，精确捕获 IOException 和 BizException
- 移除 HttpClientManager 中废弃的重试策略配置代码
- 将 OpenApiUtils 和 Sequence 中的字符串和数值改为常量定义
- 修复 ParallelExecuteProcessor 中的位运算符错误，使用逻辑与操作符
- 优化 PasswordCryptUtils 中的随机数生成器初始化方式
- 统一项目中的代码风格和格式化规范